--- a/crates/bevy_math/Cargo.toml
+++ b/crates/bevy_math/Cargo.toml
@@ -11,3 +11,6 @@ keywords = ["bevy"]
 [dependencies]
 glam = { version = "0.20.0", features = ["serde", "bytemuck"] }
 bevy_reflect = { path = "../bevy_reflect", version = "0.5.0", features = ["bevy"] }
+
+[features]
+xform_64 = []
