--- a/crates/bevy_transform/Cargo.toml
+++ b/crates/bevy_transform/Cargo.toml
@@ -18,3 +18,7 @@ bevy_utils = { path = "../bevy_utils", version = "0.5.0" }
 
 # other
 smallvec = { version = "1.6", features = ["serde", "union", "const_generics"] }
+
+
+[features]
+xform_64 = []
